# Spectreye

./: .gitignore  LICENSE.md  README.md  \  build_dataset.py  gtest.sh  kerastest.py  main.py  notes  populate.py  rtest.sh  setup.sh  spectreye.py  tests.py  timeline.py
datasets/: single_res
datasets/HallC_SHMS_HMS_2018/: README.md
datasets/angle_marks/hms/: data.csv  timeline.csv
datasets/angle_marks/shms/: data.csv  timeline.csv
prototype/: spectreye.py  tests.py
spectreye/: CMakeLists.txt  spectreye
spectreye-cli/: .gitignore  CMakeLists.txt  spectreye_cli.cpp
spectreye/data/: .gitignore
spectreye/include/: spectreye.h
spectreye/src/: spectreye.cpp  spectreye_cli.cpp
spectreye/tests/: qtest.sh
src/cpp/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  spectreye  spectreye.cpp  spectreye.h  spectreye_cli.cpp
src/python/: populate.py  spectreye.py  tests.py  timeline.py
